# Do-an-nganh-KTMT

./: .gitignore  PDF_Processing.ipynb  README.md  start.sh
BE/: .env  NOTE.md  README.md  config.yaml  main_api.py  pyproject.toml
BE/src/agents/: agent_flow.py  agent_manager.py  agent_setup.py  api.py
BE/src/agents/agent/: __init__.py  agent_factory.py
BE/src/agents/prompt/: __init__.py  prompt.py
BE/src/agents/tools/: __init__.py  base_image_tool.py  search_func.py  search_tool.py
BE/src/embedding_services/: __init__.py  api.py  document_indexer.py  embedding_client.py  vector_store.py
BE/src/llm_call/: __init__.py
BE/src/pdf_processing/: __init__.py  api.py  pdf_processor.py
BE/src/schema/: __init__.py
BE/src/utils/: __init__.py  load_config.py  logger.py  s3_client.py
Embdding_server/: README.md  pyproject.toml
Embdding_server/embedding/: __init__.py  embedding.py
Embdding_server/rerank/: __init__.py
Embdding_server/schema/: __init__.py  schema.py
FE/: package-lock.json  package.json
FE/src/: App.jsx  index.css
FE/src/api/: agent.js  client.js  embedding.js  pdf.js
FE/src/components/: BookCard.jsx  Button.jsx  Card.jsx  Input.jsx  Layout.jsx  Modal.jsx
FE/src/hooks/: useAuth.js
FE/src/pages/: BookDetail.jsx  Chat.jsx  Home.jsx
Tools/: mathjs.py  request.py  sympy_api.py  test_00.py
