[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "botocore>=1.40.74",
    "google-adk>=1.17.0",
    "google-genai>=1.46.0",
    "httpx>=0.28.1",
    "openai>=2.6.1",
    "pymupdf>=1.26.6",
    "pypdfium2>=5.0.0",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
    "ultralytics>=8.3.228",
]
